padding added to cart and user buttons

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <li><a href="#" class="nav-link">Accesories</a></li>
       </ul>
       <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-secondary ml-auto"><i class="fas fa-shopping-cart"></i>Cart</button>
-        <button type="button" class="btn btn-secondary ml-auto"><i class="fas fa-user"></i>Account</button>
+        <button type="button" class="btn btn-secondary ml-auto"><i class="fas fa-shopping-cart pr-1"></i>Cart</button>
+        <button type="button" class="btn btn-secondary ml-auto"><i class="fas fa-user pr-1"></i>Account</button>
       </div>
     </div>
   </nav>
