--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col-lg-9">
           <h2>New Arrivals</h2>
           <div class="row">
-            <div class="col-lg-3 col-sm-6 px-2 py-2">
+            <div class="col-lg-3 col-sm-6 p-2">
               <div class="card">
                 <div class="card-image">
                   <img src="img/4.jpeg" alt="obrazek">
@@ -103,7 +103,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-sm-6 px-2 py-2">
+            <div class="col-lg-3 col-sm-6 p-2">
               <div class="card">
                 <div class="card-image">
                   <img src="img/5.jpeg" alt="obrazek">
@@ -114,7 +114,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-sm-6 px-2 py-2">
+            <div class="col-lg-3 col-sm-6 p-2">
               <div class="card">
                 <div class="card-image">
                   <img src="img/6.jpeg" alt="obrazek">
@@ -125,7 +125,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-sm-6 px-2 py-2 d-lg-none .d-xl-block">
+            <div class="col-lg-3 col-sm-6 p-2 d-lg-none d-xl-block">
               <div class="card">
                 <div class="card-image">
                   <img src="img/7.jpeg" alt="obrazek">
