--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#" class="navbar-brand">HARBINGER</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu"
       aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle-navigation">
-      <span class="navbar-toggle-icon">przycisk</span>
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="mobile-menu">
       <ul class="navbar-nav">
