--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
 
         <div class="col-md-4 order-md-2">
-          <div class="box px-5 mb-3 pb-4">
+          <div class="box mb-3 pb-4">
             <h3>HARBINGER</h3>
             <p>Vestibulum varius neque non posuere dapibus.</p>
             <ul class="social-media">
@@ -245,7 +245,7 @@
 
 
         <div class="col-md-4 order-md-3">
-          <div class="box px-5 mb-3 pb-4">
+          <div class="box mb-3 pb-4">
             <h3>Contact us</h3>
             <p>2795 Cuningham Court <br>
               Rochester Hills 48306 <br>
@@ -256,7 +256,7 @@
 
 
         <div class="col-md-4 order-md-1">
-          <form class="box px-5 mb-3 pb-4">
+          <form class="box mb-3 pb-4">
             <h3>Newsletter</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="form-group py-3">
